# ashyk-bilim

./: .dockerignore  .editorconfig  .env.example  .gitignore  .oxfmtrc.json  README.md  ashyq-bilim-dep-audit.md  docker-compose.yml  example.env  judge0.conf  package.json  skills-lock.json  turbo.json  vite.config.ts
apps/api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  cli.py  fix-guidelines.md  mypy-report.txt  mypy-temp-report.txt  openapi.json  package.json  pyproject.toml  pyrefly-report-utf8.txt  pyrefly-report.txt  pyrefly-warnings-utf8.txt  pyrefly-warnings.txt  pyright-report.txt  ruff-check-report.txt  skills-lock.json  worker.py
apps/api/cachebox/: __init__.pyi
apps/api/config/: config.py
apps/api/judge0/: __init__.pyi
apps/api/migrations/: env.py
apps/api/migrations/versions/: 01298eb34544_.py  2026_05_04_5d3a2896acff_remove_unused_submission_metadata.py  2026_05_11_8cd5865dca47_fix_upload_columns.py  2026_05_11_b7e2c9f5a341_code_execution_runs.py  2026_05_12_c8f2d4a91e6b_assessment_modernization_phase0.py  2026_05_13_977d3e32c36a_add_type_quiz_to_activitytypeenum.py  2026_05_13_ce32ea3953ee_merge_assessment_and_assignment_heads.py  2026_05_13_d9a1c7e5b402_assessment_grading_finalization.py  2026_05_14_3f7c1d8a9b2e_drop_legacy_breakdown_column.py  2026_05_14_7b6a5c4d3e2f_delete_legacy_code_test_fields.py  2026_05_14_9c1f2a3b4d5e_file_submission_activity.py  2026_05_14_f1a2b3c4d5e6_drop_legacy_breakdown_column.py  2026_05_14_f1c2d3e4a5b6_purge_legacy_assignment_artifacts.py  2026_05_15_0d1e2f3a4b5c_merge_quiz_cleanup_heads.py  2026_05_15_4e2d1c0b9a7f_merge_file_submission_and_cleanup_heads.py  2026_05_15_b4c5d6e7f8a9_remove_legacy_quiz_activity.py  2026_05_18_1a2b3c4d5e6f_student_workflow_invariants.py  2026_05_18_6f7a8b9c0d1e_remove_legacy_block_quiz_nodes.py  2026_05_18_7a8b9c0d1e2f_purge_legacy_assignment_assessment_rows.py  2026_05_22_8b9c0d1e2f3a_assessment_access_allowlists.py  2026_05_22_9c0d1e2f3b4a_add_performance_indexes.py  2026_05_23_a0b1c2d3e4f5_fix_bad_generated_usernames.py  2026_05_23_b1c2d3e4f5a6_add_search_fts_indexes.py  2026_05_23_b1c2d3e4f5a7_add_search_fts_indexes.py  2026_05_25_c4d5e6f7a8b9_assessment_item_metadata.py  2026_06_02_44e39d920b74_migrate_legacy_timestamp_fields.py  2026_06_03_a07f0f626c04_remove_platform_landing.py  2026_06_03_d60d3d2c88f1_remove_previews_socials_links.py  2026_06_28_ai_adaptive_learning.py  2026_06_29_e2f3a4b5c6d7_publish_migrated_assessments.py  2296542d7e47_restore_activity_course_id_column.py  47d4ef24c3d4_fix_activity_settings_list_to_dict.py  a1b2c3d4e5f6_add_canonical_progress_tables.py  a1b2c3d4e5f7_drop_legacy_assignment_tables.py  a2b3c4d5e6f7_phase0_phase1_assignment_grading_redesign.py  a7aca90f424a_add_pgvector_document_chunks_table.py  b1c2d3e4f5a6_add_auth_sessions_table.py  b2c3d4e5f6g7_phase2_phase3_phase4_grading_redesign.py  b84feb892d7a_remove_email_verification.py  c2d3e4f5a6b7_add_auth_audit_log_table.py  (+22 more)
apps/api/scripts/: audit_errors.py  check_contracts.py  check_migration_graph.py  export_openapi.py  lint_response_models.py
apps/api/src/: router.py
apps/api/src/app/: __init__.py  error_context.py  errors.py  exceptions.py  factory.py  judge0_patch.py  lifespan.py  middleware.py  routing.py
apps/api/src/auth/: backend.py  db.py  manager.py  users.py
apps/api/src/core/: http.py  platform.py  timezone.py
apps/api/src/db/: ai_course_analysis.py  ai_lecture_review.py  ai_qa_thread.py  ai_remediation.py  ai_runtime.py  ai_student_memory.py  ai_submission_analysis.py  analytics.py  assessment_access.py  assessment_contracts.py  assessments.py  audit.py  auth_audit_log.py  auth_sessions.py  code_execution.py  collections.py  collections_courses.py  file_submissions.py  gamification.py  model_registry.py  permission_enums.py  permissions.py  platform.py  resource_authors.py  strict_base_model.py  student_activity_runtime.py  trail_runs.py  trail_steps.py  trails.py  uploads.py  usergroup_resources.py  usergroup_user.py  usergroups.py  users.py
apps/api/src/infra/: __init__.py  health.py  logging.py  metrics.py  rate_limit.py  redis.py  settings.py
apps/api/src/repositories/: role_repository.py
apps/api/src/routers/: analytics.py  auth.py  dev.py  file_submissions.py  gamification.py  health.py  internal.py  platform.py  rbac.py  roles.py  search.py  trail.py  usergroups.py  users.py  utils.py
apps/api/src/security/: auth.py  auth_cookies.py  auth_lifetimes.py  file_validation.py  keys.py  rbac.py  security.py
apps/api/src/services/: audit.py  file_submissions.py  platform.py  platform_admin.py  platform_users.py  rate_limit.py  student_activity_runtime.py
apps/api/src/tasks/: assessment_scheduler.py  assessment_timer.py  assignment_scheduler.py  plagiarism_checker.py  upload_reaper.py
apps/api/src/tests/: conftest.py  test_ai_chunking.py  test_ai_config.py  test_ai_context.py  test_ai_contracts.py  test_ai_embeddings.py  test_ai_evals.py  test_ai_hardening.py  test_ai_moderation.py  test_ai_prompt_localization.py  test_analytics_assessment_detail_api.py  test_analytics_saved_views_api.py  test_assessment_access_api.py  test_assessment_authoring_lifecycle.py  test_assessment_auto_healing.py  test_assessment_new_endpoints_api.py  test_assessment_phase0_contract_api.py  test_assessment_readiness_api.py  test_assessment_review_api.py  test_assessment_settings.py  test_auth_sessions.py  test_auth_usernames.py  test_chunked_upload_endpoint.py  test_code_execution_service.py  test_collections_api.py  test_document_pdf_activity.py  test_error_envelope.py  test_file_submissions.py  test_google_oauth.py  test_gradebook_legacy_policy.py  test_gradebook_unsupported_policy.py  test_grading_pipeline_validate.py  test_json_types.py  test_late_policy_fallback.py  test_link_preview.py  test_model_registry.py  test_quiz_grader.py  test_security.py  test_settings_config.py  test_startup_bootstrap.py  (+7 more)
apps/api/src/types/: __init__.py  json.py  narrowing.py  plagiarism.py  simple_namespace.py
apps/api/src/worker/: __init__.py  broker.py
(+2082 files in other folders)
