[project]
name = "ashyk-bilim-api"
version = "0.1.0"
description = "Ashyk Bilim Backend"
requires-python = ">=3.14.5,<3.15.0"

dependencies = [
  # Framework
  "fastapi>=0.136.3",
  "granian[reload,uvloop]>=2.7.4",

  # Database
  "sqlalchemy>=2.0.49",
  "sqlmodel>=0.0.38",
  "alembic>=1.18.4",
  "psycopg[binary]>=3.3.4",
  "pgvector>=0.4.2",
  "redis<8",

  # Validation / Config
  "pydantic[email]>=2.13.4",
  "pydantic-settings>=2.14.1",

  # Auth
  "fastapi-users[sqlalchemy]>=15.0.5",
  "pyjwt>=2.13.0",

  # AI
  "openai>=2.38.0",
  "pydantic-ai-slim[logfire,openai]>=1.99.0",
  "tiktoken>=0.13.0",

  # Async / Jobs
  "taskiq>=0.12.4",
  "taskiq-fastapi>=0.5.0",
  "taskiq-redis>=1.2.2",

  # API
  "fastapi-pagination>=0.15.13",
  "python-multipart>=0.0.29",

  # Infra / Observability
  "logfire[fastapi,sqlalchemy]>=4.33.0",

  # Utilities
  "cachebox>=5.2.3",
  "httpx>=0.28.1",
  "python-ulid>=3.1.0",
  "resend>=2.30.1",
  "selectolax>=0.4.9",
  "typer>=0.25.1",

  # Sandbox / Execution
  "judge0>=0.0.8",
]

[dependency-groups]
dev = [
  # Lint / Format
  "ruff>=0.15.12",

  # Type Checking
  "basedpyright>=1.39.4",
  "mypy>=1.20.2",
  "pyrefly>=0.64.1",

  # Testing
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",

  # Dev Server
  "uvicorn[standard]>=0.47.0",

  # Fixtures
  "faker>=40.15.0",
]

[tool.ruff]
target-version = "py314"
preview = true
line-length = 120

exclude = [".git", ".ruff_cache", ".venv", "__pycache__", "node_modules", "dist", "build", "alembic"]

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = [
  # --- General & Style ---
  "F401", # unused-import: Module imported but not used
  "COM812", # missing-trailing-comma: Missing a trailing comma (often conflicts with formatters)
  "PLC0415", # import-outside-top-level: Import should be at the top of the file
  "PLR2004", # magic-value-comparison: Use of unnamed numerical constants in comparisons
  "PLR0913", # too-many-arguments: Function has too many arguments (typically > 5)

  # --- Type Checking (flake8-type-checking) ---
  "TC001", # move-to-type-checking: Move first-party imports into TYPE_CHECKING blocks
  "TC002", # move-to-type-checking: Move third-party imports into TYPE_CHECKING blocks
  "TC003", # move-to-type-checking: Move stdlib imports into TYPE_CHECKING blocks

  # --- Annotations (flake8-annotations) ---
  "ANN001", # missing-type-function-argument: Missing type annotation for function argument
  "ANN201", # missing-return-type-undocumented-public-function: Missing return type for public function

  # --- Security (flake8-bandit) ---
  "S101", # assert: Use of `assert` (can be optimized out in production)
  "S105", # hardcoded-password-string: Possible hardcoded password string assignment
  "S106", # hardcoded-password-func-arg: Possible hardcoded password in function call
  "S110", # try-except-pass: Exception caught and silenced with `pass`

  # --- Exceptions (tryceratops / flake8-errmsg) ---
  "BLE001", # blind-except: Do not catch `Exception` directly; use specific exceptions
  "TRY003", # raise-vanilla-args: Avoid long message strings in exception raises
  "EM101", # raw-string-in-exception: Exception must not use a string literal directly

  # --- Docstrings (pydocstyle) ---
  "D", # docstring-rules: Disables all docstring-related rules
  "D100", # missing-docstring-in-public-module: Missing docstring at the top of a file
  "DOC201", # missing-docstring-in-function: Missing docstring in function
  "DOC202", # missing-docstring-in-method: Missing docstring in method
  "DOC501", # missing-docstring-in-class: Missing docstring in class

  # --- Miscellaneous ---
  "DTZ005", # call-datetime-now-without-tzinfo: `datetime.now()` used without a timezone
  "T20", # flake8-print: Disallows `print` statements (prevents debug debris)
  "ARG002", # unused-method-argument: Method argument is defined but never used
  "TD002", # missing-todo-author: TODO comment is missing an author name
  "TD003", # missing-todo-link: TODO comment is missing a link to a tracker/issue

  "PLC2701",
  "RUF001",
  "E501", # line-too-long: Line is too long
]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = true

[tool.ruff.lint.pylint]
max-args = 8 # Slightly more relaxed than default for FastAPI dependencies

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

markers = ["asyncio: mark test as async"]

[tool.logfire]
ignore_no_config = true

[tool.pyrefly]
project-includes = ["**/*.py"]
# Prevent deep nesting which leads to unmaintainable FastAPI endpoints
max-complexity = 10

[tool.pyrefly.rules]
# Enable rules that catch logic errors, not just style
async-function-naming = true
no-shadowed-builtins = true
strict-exception-handling = true # Complements your Ruff BLE/TRY rules

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]

# Robustness settings
warn_unreachable = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

# Lowering the "Nitpick" factor
disallow_untyped_decorators = false # FastAPI routes often use untyped decorators
warn_return_any = false # Too noisy with FastAPI's dynamic responses
implicit_reexport = true # Useful for __init__.py patterns

# Better agentic determinism
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
# Libraries that traditionally have poor or no typing
module = ["cachebox.*", "judge0.*", "python_ulid.*", "selectolax.*"]

ignore_missing_imports = true

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"

exclude = ["**/__pycache__", "**/alembic", "**/node_modules", "**/tests", "**/venv", ".venv"]

# Robustness without the "Any" nitpicking
reportAny = false
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnusedCallResult = false

# Strong correctness guarantees
reportImplicitOverride = true
reportPropertyTypeMismatch = true
reportUnreachable = true

# Better large-codebase maintainability
reportDuplicateImport = true
reportIncompatibleMethodOverride = true
reportShadowedImports = true
